--- a/css/nav.css
+++ b/css/nav.css
@@ -14,6 +14,9 @@
   font-size: 30px;
   font-weight: 800;
 }
+.logo-2 {
+  color: var(--secondary-color);
+}
 .nav-links {
   margin-right: 45px;
   color: var(--text-color);
