--- a/css/about.css
+++ b/css/about.css
@@ -16,6 +16,11 @@
 }
 .about-card {
   width: 100%;
+  border: 1px solid var(--border-color);
+  padding: 20px;
+  border-radius: 20px;
+  position: relative;
+  background-color: #00000050;
 }
 .about-card-title {
   font-size: 24px;
