--- a/css/nav.css
+++ b/css/nav.css
@@ -87,8 +87,8 @@
   right: 0;
   left: 0;
   top: 70px;
-  background-color: var(--background-color);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: black;
+  border-bottom: 1px solid var(--border-color);
   display: none;
   z-index: 999;
 }
@@ -112,7 +112,7 @@
   transition: all 0.3s ease;
   text-decoration: none;
   text-align: center;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .sidebar-link::after, .sidebar-button::after {
