trainers section done

--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,8 @@
 #about {
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 120px;
+  background-color: var(--background-color);
+  z-index: 2;
 }
 .about-title {
   font-size: 42px;
@@ -30,3 +32,55 @@
 .about-card-text {
   padding-top: 10px;
 }
+
+
+.service-title {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 52px;
+}
+.service-card {
+  border: var(--text-color) solid 2px;
+  width: 100%;
+  height: fit-content;
+  padding: 50px;
+  padding-bottom: 80px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  transition: all 0.5s ease;
+}
+.service-card:hover .weight-svg {
+  transform: rotate(335deg);
+}
+.service-card:hover .about-svg:not(.weight-svg) {
+  transform: rotate(360deg);
+}
+.service-card:hover {
+  background-color: black;
+}
+.about-svg {
+  width: 100px;
+  height: 100px;
+  fill: black;
+  transition: all 0.5s ease;
+}
+.svg-container {
+  padding: 20px;
+  background-color: var(--text-color);
+  border-radius: 50%; 
+  overflow: hidden;
+  display: inline-block;
+}
+.card-title {
+  margin-top: 20px;
+ font-size: 24px; 
+ font-weight: 700;
+}
+.card-desc {
+  text-align: center;
+  width: 70%;
+}
+
