--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
   max-width: 100%;
   display: flex;
   flex-direction: row;
+  background-color: var(--background-color);
 }
 
 .header-container {
