almost everything done

--- a/css/header.css
+++ b/css/header.css
@@ -23,7 +23,7 @@
 }
 
 .banner-skills {
-  background-color: var(--primary-color);
+  background-image: var(--gradient);
   color: var(--text-color);
   transition: opacity 0.5s ease-in-out;
   padding: 2px 6px;
