--- a/css/trainers.css
+++ b/css/trainers.css
@@ -25,7 +25,7 @@
 }
 
 .trainer-overlay {
-  background-color: var(--primary-color);
+  background-image: var(--gradient);
   position: absolute;
   left: 0;
   right: 0;
@@ -38,8 +38,8 @@
   transition: transform 0.4s ease, opacity 0.4s ease, visibility 0.4s ease;
   padding: 10px;
   padding-top: 30px;
-  border-top-right-radius: 100%;
-  border-top-left-radius: 100%;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 .trainer:hover .trainer-overlay {
@@ -50,6 +50,24 @@
 .trainer-img {
   width: 300px;
   height: 400px;
+}
+.trainer-1 {
+  background-image: url("https://placehold.co/300x400");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.trainer-2 {
+  background-image: url("https://placehold.co/300x400");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.trainer-3 {
+  background-image: url("https://placehold.co/300x400");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .trainer-name {
