--- a/css/about.css
+++ b/css/about.css
@@ -18,6 +18,7 @@
 }
 .about-card {
   width: 100%;
+  height: 200px;
   border: 1px solid var(--border-color);
   padding: 20px;
   border-radius: 20px;
