--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,13 @@
   font-weight: 800;
 }
 .about-img {
-  height: 500px;
+  background-image: url("../imgs/gym-image.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 550px;
+  width: 100%;
+  border-radius: 50px;
 }
 .logo-text {
   font-weight: 800;
@@ -18,7 +24,6 @@
 }
 .about-card {
   width: 100%;
-  height: 200px;
   border: 1px solid var(--border-color);
   padding: 20px;
   border-radius: 20px;
