responsive xl fixed

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -6,7 +6,7 @@
 
 .contact-info,
 .contact-form-section {
-  min-height: 83%;
+  height: 83%;
   width: 100%;
 }
 .contact-info {
@@ -89,6 +89,12 @@
     color: var(--secondary-color);
 }
 
+@media (min-width: 1600px) {
+  .contact-info::after {
+  width: 400px;
+  height: 400px;
+  }
+}
 @media (max-width: 767px) {
   .contact-details {
     margin: 20px 10px;
@@ -97,4 +103,9 @@
     width: 30px;
     height: 30px;
   }
+  .contact-info,
+.contact-form-section {
+  min-height: 83%;
+  width: 100%;
+}
 }
