--- a/css/header.css
+++ b/css/header.css
@@ -67,11 +67,13 @@
 }
 
 .header-social-media {
-  width: 10%;
+  margin-right: 50px;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 20px;
-  margin-top: 200px;
 }
 
 .header-social-button {
@@ -118,7 +120,11 @@
   width: 30px;
   fill: white;
 }
-
+@media (min-width: 1600px) { 
+  .header-title {
+    font-size: 100px;
+  }
+}
 @media (max-width: 1024px) {
   #header {
     height: 80vh;
