--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
   max-width: 100%;
   display: flex;
   flex-direction: row;
-  background-color: var(--background-color);
+  background: linear-gradient(to top, var(--background-color), black);
 }
 
 .header-container {
@@ -123,6 +123,9 @@
 @media (min-width: 1600px) { 
   .header-title {
     font-size: 100px;
+  }
+  .header-social-icon {
+    width: 60px;
   }
 }
 @media (max-width: 1024px) {
