--- a/css/memberships.css
+++ b/css/memberships.css
@@ -1,5 +1,6 @@
 #memberships {
-  min-height: 100vh;
+  height: fit-content;
+  padding-bottom: 100px;
   background-color: var(--background-color);
 }
 .memberships-title {
@@ -16,7 +17,7 @@
 .membership-pro, .membership-classic {
   border-radius: 20px;
   width: 80%;
-  min-height: 200px;
+  height: auto;
   padding: 25px 35px;
 }
 .membership-classic,
@@ -111,6 +112,11 @@
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
 }
 
+@media(min-width:1600px) {
+  .membership-pro, .membership-classic {
+    width: 100%;
+  }
+}
 @media(max-width:1024px) {
   .membership-pro, .membership-classic {
     width: 100%;
