--- a/css/announcements.css
+++ b/css/announcements.css
@@ -111,3 +111,9 @@ main#announcements {
 .view-all:hover .btn-text {
   color: var(--background-color);
 }
+
+@media (max-width: 767px) {
+  .announcements-title {
+    font-size: 42px;
+  }
+}
