--- a/css/trainers.css
+++ b/css/trainers.css
@@ -50,24 +50,26 @@
 .trainer-img {
   width: 300px;
   height: 400px;
+  border: 1px solid var(--border-color);
+  border-radius: 20px;
 }
 .trainer-1 {
   /*background-image: url("https://placehold.co/300x400");*/
-  background-image: url("../imgs/man.png");
-  background-size: contain;
+  background-image: url("../imgs/man.jpg");
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 .trainer-2 {
   /*background-image: url("https://placehold.co/300x400");*/
-  background-image: url("../imgs/man2.png");
+  background-image: url("../imgs/man2.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
 }
 .trainer-3 {
   /*background-image: url("https://placehold.co/300x400");*/
-  background-image: url("../imgs/man3.png");
+  background-image: url("../imgs/man3.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
