--- a/css/general.css
+++ b/css/general.css
@@ -55,3 +55,27 @@ nav a:hover {
   color: var(--text-color);
   cursor: pointer;
 }
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  transition: opacity 0.5s ease;
+}
+
+.spinner-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-spinner {
+  display: inline-block;
+  vertical-align: middle;
+}
